[metadata]
name = backuptools
version = 0.0.1
author = hieunv495
author_email = hieunv495@gmail.com
description = Backup, restore, version control local data to google drive
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hieunv495/backuptools
project_urls =
    Bug Tracker = https://github.com/hieunv495/backuptools/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    google-api-python-client
    google-auth-httplib2
    google-auth-oauthlib
    python-magic
    checksumdir
[options.packages.find]
where = src